virtual-service-weighted.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: "VirtualService"
metadata:
  annotations: {}
  labels: {}
  name: "products-istio-vs"
spec:
  gateways:
  - "products-istio-gw"
  hosts:
  - "*"
  http:
  - route:
    - destination:
        host: "products"
        port:
          number: 9090
      weight: 75
    - destination:
        host: "products-v101"
        port:
          number: 9090
      weight: 25
